fixing outline overlap

--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
 .hero-ice-blue-text {
   font-weight: 900;
   -webkit-text-fill-color: rgb(0, 188, 235);
-  -webkit-text-stroke: 0.7px whitesmoke;
   color: rgb(0, 188, 235);
-  text-shadow: 0px 1px 2.5px whitesmoke;
+  text-shadow: -1px -1px 0 whitesmoke, 1px -1px 0 whitesmoke,
+    -1px 1px 0 whitesmoke, 1px 1px 0 whitesmoke;
 }
 
 #hero-section h1 {
